--- a/teltech/src/index.css
+++ b/teltech/src/index.css
@@ -5,10 +5,11 @@
 * {
   margin: 0%;
   padding: 0%;
-  overflow: hidden;
+  /* overflow: hidden; */
   box-sizing: border-box;
 }
 
-body {
-    overflow: hidden;
+article {
+  height: calc(100vh - 80px);
+  overflow: hidden;
 }
